5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1712_2505.log
== TEST (2019-05-08 15:36:23) 
-- CODE:
from math import*

g= radians(float(input()))
h= 3
e= 0


while (c<k):
	e= g - ((g**3)/factorial(c))
	c= h + 2
	print(round(e,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    g= radians(float(input()))
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:21:22) 
-- CODE:
from math import*

x= eval(input())
g= int(input())
h= 1
e= 0
j=0
aux=1

while (e<g):
	j= j - (aux*((x**h)/factorial(h))
	if (aux == 1):
			  aux=-1
	else:
			  aux=1
	e=e+1
	h=h+2
print(round(j,10))

-- ERROR:
File "XXXX", line 12
    if (aux == 1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:22:05) 
-- CODE:
from math import*

x= eval(input())
g= int(input())
h= 1
e= 0
j=0
aux=1

while (e<g):
	j= j - (aux*((x**h)/factorial(h))
			  if (aux == 1):
			  aux=-1
			  else:
			  aux=1
			  e=e+1
			  h=h+2
print(round(j,10))

-- ERROR:
File "XXXX", line 12
    if (aux == 1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:22:41) 
-- CODE:
from math import*

x= eval(input())
g= int(input())
h= 1
e= 0
j=0
aux=1

while (e<g):
	j= j - (aux*((x**h)/factorial(h))
			  if (aux == 1):
			  	aux=-1
			  else:
			  	aux=1
			  e=e+1
			  h=h+2
print(round(j,10))

-- ERROR:
File "XXXX", line 12
    if (aux == 1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:23:20) 
-- CODE:
from math import*

x= eval(input())
g= int(input())
h= 1
e= 0
j=0
aux=1

while (e<g):
	j= j - (aux*((x**h)/factorial(h))
	if (aux == 1):
		aux=-1
	else:
		aux=1
	e=e+1
	h=h+2
print(round(j,10))

-- ERROR:
File "XXXX", line 12
    if (aux == 1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:23:38) 
-- CODE:
from math import*

x= eval(input())
g= int(input())
h= 1
e= 0
j=0
aux=1

while (e<g):
	j= j - (aux*((x**h)/factorial(h))
	if(aux == 1):
		aux=-1
	else:
		aux=1
	e=e+1
	h=h+2
print(round(j,10))

-- ERROR:
File "XXXX", line 12
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:25:24) 
-- CODE:
from math import*

x = eval(input())
k = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < k):
	e = e + (aux * ((x ** d) / factorial(d)))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
	c = c + 1
	d = d + 2
	
print(round(e, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:25:29) 
-- CODE:
from math import*

x = eval(input())
k = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < k):
	e = e + (aux * ((x ** d) / factorial(d)))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
	c = c + 1
	d = d + 2
	
print(round(e, 10))
-- EXECUTION TIME:
0.209131
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
